# research-terminal_v2

./: README.md  alpha_dashboard.py  requirements.txt
.devcontainer/: devcontainer.json
alpha-engine/: README.md  pyproject.toml
alpha-engine/alpha_engine/models/: risk_parity.py
alpha-engine/alpha_engine_quant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jump-engine/: README.md  pyproject.toml
jump-engine/jump_engine/nucleus/: sde.py
jump-engine/jump_engine/pricing/: analytical.py  options.py  simulation.py
jump-engine/jump_engine/utils/: device.py
jump-engine/quant_jump_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jump-engine/scripts/: jump_demo.py
jump-engine/tests/: test_convergence.py
limit-engine/: README.md  pyproject.toml
limit-engine/quant_limit_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
limit-engine/scripts/: lab_demo.py
quant-engine/: README.md  engine_test.py  main.py  pyproject.toml  tester.py
quant-engine/connectivity/: data_handler.py  schema.py
quant-engine/nucleus/: __init__.py  base.py  constants.py  verification.py
quant-engine/nucleus/sampling/: samplers.py
quant-engine/nucleus/stochastic/: dynamics.py  solver.py
quant-engine/nucleus/utils/: device_manager.py  numerical.py
quant-engine/quant_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quant-engine/signal_lab/: features.py  indicators.py  statistical.py  transform.py
quant-engine/strategist/: allocation.py  backtester.py  optimizer.py  risk_manager.py
rate-engine/: README.md  pyproject.toml  requirements.txt
rate-engine/quant_rate_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rate-engine/rate_engine/nucleus/: sde.py  solvers.py
rate-engine/rate_engine/pricing/: bonds.py
rate-engine/rate_engine/utils/: device.py  statistics.py
rate-engine/tests/: test_convergence.py
signal-engine/: README.md  pyproject.toml
signal-engine/quant_signal_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+8 files in other folders)
